@@ -1,3 +1,10 @@
+2016-02-19  Danilo Chang  <ray2501@gmail.com>
+
+    * generic/tclmdb.c: Fix CURSOR del commmand option issue.
+      Give the correct option check
+    * generic/tclmdb.c: CURSOR get command add options:
+      -get_multiple and -next_multiple
+
 2016-02-16  Danilo Chang  <ray2501@gmail.com>
 
     * generic/mdb.c: Update source code.
